Setting up server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/stephanieraymos/koa/issues"
   },
-  "homepage": "https://github.com/stephanieraymos/koa#readme"
+  "homepage": "https://github.com/stephanieraymos/koa#readme",
+  "dependencies": {
+    "koa": "^2.13.0",
+    "nodemon": "^2.0.4"
+  }
 }
